# jpeg

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: cmake-multi-platform.yml
docs/: colour.py  greyscale.py
include/jpeg_cpp/: array.h  bit_string.h  coefficient.h  component.h  encoding.h  general.h  huff_table.h  jpeg.h  q_table.h
src/: CMakeLists.txt
src/jpeg/: CMakeLists.txt
src/jpeg_cpp/: CMakeLists.txt  array.cpp  bit_string.cpp  coefficient.cpp  component.cpp  encoding.cpp  huff_table.cpp  jpeg.cpp  q_table.cpp
src/jpeg_py/: CMakeLists.txt  jpeg.cpp
test/: CMakeLists.txt
test/jpeg_cpp_test/: CMakeLists.txt  array_test.cpp  bit_string_test.cpp  encoding_test.cpp  huff_table_test.cpp  jpeg_test.cpp  q_table_test.cpp
test/jpeg_py_test/: jpeg_test.py  jpeg_tests.py
